# snap-recap

./: .env.example  .gitattributes  .gitignore  GITHUB_SETUP.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: build.yml
.kiro/specs/recap-synth-app/: .config.kiro  design.md  requirements.md  tasks.md
src/: App.tsx  main.tsx
src-python/: __init__.py  main.py  models.py  plugin_registry.py  state_manager.py
src-python/pipeline/: __init__.py  orchestrator.py
src-python/pipeline/ingestion/: __init__.py  bubble_separator.py  page_downloader.py  panel_detector.py  phase.py  smart_cropper.py
src-python/pipeline/intelligence/: __init__.py  image_upscaler.py  phase.py  script_generator.py  voice_generator.py
src-python/pipeline/production/: __init__.py  motion_engine.py  phase.py  subtitle_burner.py  timeline_assembler.py  video_exporter.py  youtube_uploader.py
src-python/providers/: __init__.py  base.py
src-python/providers/llm/: __init__.py  gemini.py  groq.py  ollama.py  openrouter.py
src-python/providers/tts/: __init__.py  elevenlabs.py  local.py
src-python/tests/: __init__.py  test_ingestion.py  test_intelligence.py  test_models.py  test_orchestrator.py  test_placeholder.py  test_plugin_registry.py  test_production.py  test_state_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: NavigationSidebar.tsx
src/components/ingestion/: ImageExplorer.tsx  MangaPageViewer.tsx
src/components/intelligence/: LiveLogPanel.tsx  PhaseProgressList.tsx
src/lib/: ipc.ts
src/screens/: IngestionScreen.tsx  IntelligenceScreen.tsx  ProductionScreen.tsx
src/store/: pipelineStore.ts
src/styles/: tokens.css
(+4 files in other folders)
