[package]
name = "snap-recap"
version = "0.1.0"
description = "Snap Recap — AI-powered manga/manhwa recap video pipeline"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snap_recap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
